--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Python 3.7.6
-Flask 1.1.1
-Werkzeug 1.0.0
+Flask==1.1.1
+Werkzeug==1.0.0
 howdoi==1.2.1
-Discord 0.0.10
+discord 
+python-dotenv==0.13.0
