--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN="NzE3Mzg1NTE2NTMzODA5MjE0.Xtavbg.vXSPMNSpJGpLwxvznvku57gxWEo"
+DISCORD_TOKEN="NzE3Mzg1NTE2NTMzODA5MjE0.XtfhxA.QitgGnzmn_wFMRAZJerp8VuhHd0"
