--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,6 +26,8 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Start flask server
+      env:
+        DISCORD_TOKEN: Test
       run: |
         python app.py
     - name: Test with pytest
