--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Start flask server
       env:
-        DISCORD_TOKEN: Test
+        DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
+        TESTING: ${{ secrets.TESTING }}
       run: |
         python app.py
     - name: Test with pytest
